set up build tools- npm, webpack, babel

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Weed Strike</title>
-    <script type="text/javascript" src="bundle.js"></script>
+    <script type="text/javascript" src="the_game.js"></script>
   </head>
   <body>
     Weed Strike - hello world
