--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <script type="text/javascript" src="the_game.js"></script>
   </head>
   <body>
-    <div id="ws-main-display"></div>
+    <div id="ws-avatar-display" class="ws-display"></div>
+    <div id="ws-main-display" class="ws-display"></div>
+    <div id="ws-message-display" class="ws-display"></div>    
   </body>
 </html>
